Fix flexbox on Safari?

--- a/app/assets/stylesheets/DocumentSet/show/app.less
+++ b/app/assets/stylesheets/DocumentSet/show/app.less
@@ -12,7 +12,12 @@
   width: 50%;
   border: 5px solid transparent;
   z-index: 2; // hover descriptions go above everything
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
   flex-direction: column;
 }
 
@@ -27,6 +32,8 @@
 }
 
 #tree-app-tree {
+  -ms-flex-grow: 1;
+  -webkit-flex-grow: 1;
   flex-grow: 1;
 }
 
